--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,8 +9,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
     "font-awesome": "^4.7.0",
+    "pinia": "^2.2.4",
     "vue": "^3.4.29",
     "vue-router": "^4.4.3"
   },
