--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,8 @@
     "font-awesome": "^4.7.0",
     "pinia": "^2.2.4",
     "vue": "^3.4.29",
-    "vue-router": "^4.4.3"
+    "vue-router": "^4.4.3",
+    "vue-toastification": "^2.0.0-rc.5"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.5",
